{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 10,
  "lineage": "2805f8a4-6d87-aab2-ad6d-1ddc37050a23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058bd2d568351da34",
            "arn": "arn:aws:ec2:us-east-1:730335489279:instance/i-01528517d07808402",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01528517d07808402",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d3cc4ae5b23035c",
            "private_dns": "ip-192-168-1-244.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.244",
            "public_dns": "ec2-3-80-87-184.compute-1.amazonaws.com",
            "public_ip": "3.80.87.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "managed-by": "Terraform",
                  "owner": "Gabi"
                },
                "throughput": 125,
                "volume_id": "vol-0f3cbb30545999a6a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d41c9b94f0999a97",
            "tags": {
              "Name": "Debian-Desafio"
            },
            "tags_all": {
              "Name": "Debian-Desafio",
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0542821e17e098d95"
            ]
          },
          "dependencies": [
            "aws_security_group.GpSec-Linux",
            "aws_subnet.Subrede-Pub1",
            "aws_vpc.VPC-CloudPlay",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW-CloudPlay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:internet-gateway/igw-0bd1424b3ba342cbf",
            "id": "igw-0bd1424b3ba342cbf",
            "owner_id": "730335489279",
            "tags": {
              "Name": "IGW-CloudPlay"
            },
            "tags_all": {
              "Name": "IGW-CloudPlay",
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "vpc_id": "vpc-039292fbf528683b5"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rotas-CloudPlay-Pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:route-table/rtb-079c376e218ccb5a9",
            "id": "rtb-079c376e218ccb5a9",
            "owner_id": "730335489279",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Rotas-CloudPlay-Pri"
            },
            "tags_all": {
              "Name": "Rotas-CloudPlay-Pri",
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "timeouts": null,
            "vpc_id": "vpc-039292fbf528683b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Rotas-CloudPlay-Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:route-table/rtb-02abfd330dbf128be",
            "id": "rtb-02abfd330dbf128be",
            "owner_id": "730335489279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd1424b3ba342cbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rotas-CloudPlay-Pub"
            },
            "tags_all": {
              "Name": "Rotas-CloudPlay-Pub",
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "timeouts": null,
            "vpc_id": "vpc-039292fbf528683b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subrede-Pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c553f4044fa3404c",
            "route_table_id": "rtb-02abfd330dbf128be",
            "subnet_id": "subnet-0d41c9b94f0999a97"
          },
          "dependencies": [
            "aws_internet_gateway.IGW-CloudPlay",
            "aws_route_table.Rotas-CloudPlay-Pub",
            "aws_subnet.Subrede-Pub1",
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GpSec-Linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:security-group/sg-0542821e17e098d95",
            "description": "Libera SSH e HTTP.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0542821e17e098d95",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "GpSec-Linux",
            "name_prefix": "",
            "owner_id": "730335489279",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "timeouts": null,
            "vpc_id": "vpc-039292fbf528683b5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subrede-Pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:subnet/subnet-01a70361f77fdae36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a70361f77fdae36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335489279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subrede-Pri1"
            },
            "tags_all": {
              "Name": "Subrede-Pri1",
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "vpc_id": "vpc-039292fbf528683b5"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subrede-Pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:subnet/subnet-0d41c9b94f0999a97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d41c9b94f0999a97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335489279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subrede-Pub1"
            },
            "tags_all": {
              "Name": "Subrede-Pub1",
              "managed-by": "Terraform",
              "owner": "Gabi"
            },
            "vpc_id": "vpc-039292fbf528683b5"
          },
          "dependencies": [
            "aws_vpc.VPC-CloudPlay"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-CloudPlay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:730335489279:vpc/vpc-039292fbf528683b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08dedceb84cf90672",
            "default_route_table_id": "rtb-00dbc0ecdf812812d",
            "default_security_group_id": "sg-0abf632dfd31f2904",
            "dhcp_options_id": "dopt-017b12a5cb394c920",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039292fbf528683b5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00dbc0ecdf812812d",
            "owner_id": "730335489279",
            "tags": {
              "Name": "VPC-CloudPlay"
            },
            "tags_all": {
              "Name": "VPC-CloudPlay",
              "managed-by": "Terraform",
              "owner": "Gabi"
            }
          }
        }
      ]
    }
  ]
}